--- a/Pipfile
+++ b/Pipfile
@@ -30,7 +30,7 @@ pyaml = "==18.11.0"
 pycparser = "==2.19"
 pygments = "==2.3.1"
 pynacl = "==1.3.0"
-pyyaml = "==3.13"
+pyyaml = "==4.2b4"
 six = "==1.12.0"
 traitlets = "==4.3.2"
 wcwidth = "==0.1.7"
