--- a/circle.yml
+++ b/circle.yml
@@ -36,8 +36,4 @@ workflows:
   version: 2
   build-only:
     jobs:
-      - install_and_build:
-          filters:
-            branches:
-              ignore:
-                - master
+      - install_and_build
